--- a/Gene_tdpost_21aug.html
+++ b/Gene_tdpost_21aug.html
@@ -166,7 +166,12 @@
     <input type="date" class="form-control" id="dob" name="dob" required>
   </div>
 </div>
- 
+ <div class="col-md-4">
+          <div class="form-group">
+            <label for="Jornaya_lead_id">Jornaya Lead ID</label>
+            <input type="text" class="form-control" id="Jornaya_lead_id" placeholder="" required>
+          </div>
+        </div>
 </div>
 
 
@@ -198,3 +203,4 @@
     </script>
 </body>
 </html>
+
