--- a/Gene_tdpost_21aug.html
+++ b/Gene_tdpost_21aug.html
@@ -193,7 +193,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/Gene_tdpost_21aug.js"></script>
+  <script src="https://js.formifyweb.com/Gene_tdpost_21aug.js?ver=1"></script>
 
   <!-- Custom script for form submission and notification -->
    <script>
@@ -203,4 +203,5 @@
     </script>
 </body>
 </html>
+
 
